fix: fix no wrapping for quantity

--- a/app/components/shopping_cart/ShoppingCart.module.css
+++ b/app/components/shopping_cart/ShoppingCart.module.css
@@ -1,7 +1,7 @@
 
 .confirmation_cart_container {
   background-color: var(--rose-50) !important;
-  width: 100%;
+  width:            100%;
 }
 
 
@@ -44,6 +44,8 @@
     .divider {
       border-color: var(--rose-100);
     }
+
+
     .divider:last-child {
       display: none;
     }
@@ -76,6 +78,7 @@
             color:  var(--red);
             height: fit-content;
             width:  1.313rem;
+            white-space: nowrap;
           }
 
 
@@ -115,7 +118,9 @@
 
 
               .quantity {
-                width: 1.313rem;
+                width:       1.375rem;
+                white-space: nowrap;
+
               }
             }
 
@@ -128,6 +133,7 @@
 
     }
   }
+
 
   .main_divider {
     border-color: var(--rose-100);
@@ -170,15 +176,18 @@
 
 
 @media screen and (min-width: 1200px) {
-  .confirmation_cart_container{
+  .confirmation_cart_container {
     max-width: revert !important;
   }
+
+
   .cart_container {
     max-width: 24rem;
-    height: fit-content;
-    padding: 1.5rem;
-    width: 100%;
+    height:    fit-content;
+    padding:   1.5rem;
+    width:     100%;
     min-width: 24rem;
+
 
     h3 {
     }
@@ -186,7 +195,9 @@
 
     .empty_placeholder {
       padding-block: 1rem;
-      gap: 1rem;
+      gap:           1rem;
+
+
       p {
       }
     }
